# my_first_project_BLOBS

./: .gitignore  Dockerfile  README.md  configuration.py  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt  simulation.py
graduation_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
processors/: field_processor.py  functions.py  harvesting_processor.py  health_speed_processor.py  mating_processor.py  processor.py
simulations/: forms.py  tasks.py  tests.py  urls.py  views.py
simulations/simulator/: configuration.py  models.py  mongo_db.py  simulation.py
simulations/simulator/processors/: field_processor.py  functions.py  harvesting_processor.py  health_speed_processor.py  mating_processor.py  processor.py
static/js/: modal.js  realtime_chart.js  save_button.js  stop_button.js
templates/: index.html  login.html  name_simulation.html  name_simulation_base.html  new_anonymous_simulation.html  new_user.html  newsimulation.html  options.html  rename_simulation.html  save_simulation.html  saved_simulations.html  userspace.html  view_saved_simulation.html  view_simulation.html  view_simulation_base.html
users/: forms.py  urls.py  views.py
