[tool.poetry]
name = "graduation-project"
version = "0.1.0"
description = ""
authors = ["Sasha K <a.kosak.mbx@gmail.com>"]
readme = "README.md"
packages = [{include = "graduation_project"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.4"
pymongo = "^4.4.1"
celery = "^5.3.1"
django-redis = "^5.3.0"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

